--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@
 
 .clickOverlay {
   background-color: rgba(4, 0, 2, 0.8);
-  z-index: 50;
 }
 
 
 /* General Classes */
 
 .wrapper {
+  display: flex;
 }
 
 h3 {
@@ -45,7 +45,7 @@ h3 {
   width: 32em;
   border: solid lightgrey .1em;
   border-radius: 10px;
-  display: inline-block;
+  display: inline-flex;
   margin: .5em;
   clear: both;
 }
@@ -59,12 +59,12 @@ h3 {
   box-shadow: 3px 3px 3px #888888;
 }
 
-.info {
+aside {
   display: block;
   float: right;
   list-style-type: none;
   margin-top: 5%;
-  margin-right: 10%;
+  margin-left: 15%;
 }
 
 .name {
@@ -103,7 +103,8 @@ h3 {
   border-radius: 8px;
   z-index: 1000;
   background-color: white;
-  margin-left: 29%;
+  margin-left: 31%;
+  margin-top: 4%;
   box-shadow: 10px 10px 5px #888888;
   position: fixed;
   clear: both;
@@ -140,7 +141,6 @@ h3 {
   list-style-type: none;
 }
 
-#phone,
 #address,
 #birthday {
   color: grey;
